Fix margin spacing in footer style

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    margin: 4 px; 
 }
 
 p {
